--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
+  <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="header">
+		<div class="container">	
+			<%= render "layouts/header" %>
+		</div>
+	</div>
+	
+	<div class="navigation">
+		<div class="container">
+			<%= render "layouts/navigation" %>			
+		</div>
+	</div>
 
-<%= yield %>
+	<div class="middler">
+		<div class="container">
+			<%= yield %>
+		</div>
+	</div>
+
+	<div class="footer">
+		<div clas="container">
+			<%= render "layouts/footer" %>			
+		</div>
+	</div>
 
 </body>
 </html>
