--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,5 +4,6 @@
 		<%= link_to "EDUCATION", "#" %>
 		<%= link_to "EXPERIENCE", "#" %>
 		<%= link_to "PROJECTS", "#" %>
+		<%= link_to "CONTACT", contact_path %>
 	</div>
 </div>
